path issue of css

--- a/template/index.html
+++ b/template/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMS- INVENTORY MANAGEMENT SYSTEM</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
     <Section>
         <div class="circle"></div>
         <header>
-            <a href="#"><img src="/static/images/stock-management.png" class="logo"></a>
+            <a href="#"><img src="../static/images/stock-management.png" class="logo"></a>
             
             <ul>
                 
                 <li><a href="#">HOME</a></li>
-                <li><a href="/template/dashboard.html">DASHBOARD</a></li>
+                <li><a href="template/dashboard.html">DASHBOARD</a></li>
                 <li><a href="/template/login.html">LOG IN</a></li>
                 <li><a href="/template/aboutus.html">ABOUT US</a></li>
                 <li><a href="/template/contact.html">CONTACT</a></li>
