path issue of css

--- a/template/index.html
+++ b/template/index.html
@@ -15,10 +15,10 @@
             <ul>
                 
                 <li><a href="#">HOME</a></li>
-                <li><a href="template/dashboard.html">DASHBOARD</a></li>
-                <li><a href="/template/login.html">LOG IN</a></li>
-                <li><a href="/template/aboutus.html">ABOUT US</a></li>
-                <li><a href="/template/contact.html">CONTACT</a></li>
+                <li><a href="../template/dashboard.html">DASHBOARD</a></li>
+                <li><a href="../template/login.html">LOG IN</a></li>
+                <li><a href="../template/aboutus.html">ABOUT US</a></li>
+                <li><a href="../template/contact.html">CONTACT</a></li>
             </ul>
         </header>
 
