path issue of css

--- a/template/index.html
+++ b/template/index.html
@@ -10,7 +10,7 @@
     <Section>
         <div class="circle"></div>
         <header>
-            <a href="#"><img src="../static/images/stock-management.png" class="logo"></a>
+            <a href="#"><img src="/static/images/stock-management.png" class="logo"></a>
             
             <ul>
                 
