fixed all errors

--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -12,11 +12,11 @@
       <h2>Inventory</h2>
       <ul>
                 
-          <li><a href="/template/product.html">PRODUCTS</a></li>
-          <li><a href="/template/category.html">CATEGORIES</a></li>
-          <li><a href="/template/staff.html">STAFFS</a></li>
-          <li><a href="/template/manager.html">MANAGERS</a></li>
-          <li><a href="/template/customers.html">CUSTOMERS</a></li>
+          <li><a href="product.html">PRODUCTS</a></li>
+          <li><a href="category.html">CATEGORIES</a></li>
+          <li><a href="staff.html">STAFFS</a></li>
+          <li><a href="manager.html">MANAGERS</a></li>
+          <li><a href="customers.html">CUSTOMERS</a></li>
       </ul>
     </aside>
     <main class="main-content">
